# dmp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  package.xml  setup.py
data/cart_dmp/cart_dmp_min_jerk/: create_3D_min_jerk_sample_traj.m  sample_traj_3D_min_jerk.txt
data/cart_dmp/cart_dmp_wiggling/: create_new_sample_traj.m  sample_quat_ABGomega_traj_recorded_demo_wiggling.txt  sample_quat_traj_recorded_demo_wiggling.txt  sample_traj_3D_recorded_demo_wiggling.txt  sample_traj_3D_recorded_demo_wiggling_orig.txt  weights_quat_dmp_wiggling.txt
data/cart_dmp/quat_dmp/: A_learn  Q0  QG  nonzero_omega  nonzero_omegad  tau  w
data/cart_dmp/quat_dmp_unscrewing/: prim02_01.txt  (+3 more)
data/dmp_1D/: sample_traj_1.txt  sample_traj_2.txt  sample_traj_3.txt
include/amd_clmc_dmp/: paths.h
include/dmp/: paths.h
matlab/dmp_1D/: dmp_1D_ct_sim.m  testDMP1DFitAndUnroll.m  unrollDMP1D.m
matlab/dmp_general/: computeDMPCtTarget.m  create_matlab_func_symlinks_01.sh  dcp_franzi.m
matlab/dmp_multi_dim/: create_matlab_func_symlinks_01.sh  create_matlab_func_symlinks_02.sh  dcp_franzi.m  diffnc.m  learnMultiDimensionalPrimitiveMulti.m  smoothStartEnd1DPositionProfile.m  smoothStartEndNDPositionProfile.m  smoothStartEndNDSensors.m  smoothStartEndNDTrajectoryBasedOnPosition.m  unrollBaselineSensoryPrimitiveMatchingDemo.m  unrollNominalMultiDimensionalPrimitive.m
matlab/phase_plane/: plot_phase_plane.m
matlab/utilities/: alignTrajectory.m  compareTwoNumericFiles.m  computeAdjointTransformation.m  computeCrossProductMatrix.m  computeMatrixTrajectoryProduct.m  computeNMSE.m  convertHomogeneousMatrixToTwistCoord.m  convertSkewSymmMatrixToVector3.m  convertTwistCoordToHomogeneousMatrix.m  convertVector3ToSkewSymmMatrix.m  createDirIfNotExist.m  detectPathDiscontinuity.m  detectPathShortness.m  diffnc.m  dtw.m  generateLinespecCodes.m  getDataClippingRetainIndex.m  getDataNamesFromCombinations.m  getDataNamesWithNumericIndex.m  getLocalMaxima.m  getLocalMinima.m  getNullClippingIndex.m  getTrajectoryStartEndClippingIndex.m  performDimReductionWithPCA.m  plot_ellipse.m  readStringsToCell.m  recreateDir.m  smoothStartEnd1DPositionProfile.m  smoothStartEndNDPositionProfile.m  smoothStartEndNDTrajectoryBasedOnPosition.m  stretchTrajectory.m
plot/dmp_1D/: plot_dmp_1D.m  plot_dmp_basis_functions.m
plot/shortcuts/: create_folder_shortcuts.sh  ftraj_loa_static_1bl_1demo  ftraj_loa_static_1bl_mdemo  tau_inv_loa_static_1bl_1demo
python/dmp_1D/: DMPDiscrete1D.py
python/dmp_base/: CanonicalSystem.py  DMP.py  FunctionApproximator.py  LearningSystem.py  TransformationSystem.py
python/dmp_discrete/: CanonicalSystemDiscrete.py  DMPDiscrete.py  FuncApproximatorDiscrete.py  LearningSystemDiscrete.py  TransformSystemDiscrete.py
python/dmp_goal_system/: GoalSystem.py  QuaternionGoalSystem.py
python/dmp_param/: DMPUnrollInitParams.py  QuaternionDMPUnrollInitParams.py  TauSystem.py
python/dmp_state/: DMPState.py  DMPTrajectory.py  QuaternionDMPState.py  QuaternionDMPTrajectory.py  utility_states_trajectories.py
python/neural_nets/: NeuralNetwork.py
python/reinforcement_learning/: pi2.py
python/utilities/: DataIO.py  definitions_base.py  plot_sphere.py  pyplot_util.py  utilities.py  utility_cartesian.py  utility_quaternion.py
scripts/: compare_dmp_coupling_loa_multi_demo_different_regularizations.sh
software_test/: compare_execution_result.sh  compare_two_numeric_files.py  dmp_software_test.sh  execute_cpp_test.sh  execute_matlab_tests_and_compare_w_cpp_tests.sh  execute_python_tests_and_compare_execution_results.py  execute_python_tests_and_compare_w_cpp_and_matlab_tests.py  execute_python_tests_and_compare_w_cpp_tests.py  get_original_software_test_dir_abs_path.sh  plot_result_test_diff.m  result_cart_coord_dmp_multi_traj_training_test_0_2.txt  result_cart_coord_dmp_multi_traj_training_test_1_2.txt  result_cart_coord_dmp_single_traj_training_test_0_1.txt  result_cart_coord_dmp_single_traj_training_test_0_2.txt  result_cart_coord_dmp_single_traj_training_test_0_2_6.0_1.0_6.0.txt  result_cart_coord_dmp_single_traj_training_test_0_2_6.0_2.0_6.0.txt  result_cart_coord_dmp_single_traj_training_test_1_1.txt  result_cart_coord_dmp_single_traj_training_test_1_2.txt  result_ct_loa_learn_algo_verification_test_0_2.txt  result_dc_loa_so_sb_multi_demo_test_0_2.txt  result_dc_loa_so_sb_single_demo_test_0_1.txt  result_dc_loa_so_sb_single_demo_test_0_2.txt  result_dc_loa_so_sb_single_demo_test_1_1.txt  result_dc_loa_so_sb_single_demo_test_1_2.txt  result_dmp_1D_test_0_1_0.txt  result_dmp_1D_test_0_2_0.txt  result_dmp_1D_test_0_2_0_6.0_1.0_10.0_4.0.txt  result_dmp_1D_test_0_2_1_6.0_1.0_10.0_4.0.txt  result_dmp_1D_test_1_1_0.txt  result_dmp_1D_test_1_1_0_6.0_1.0_10.0_4.0.txt  result_dmp_1D_test_1_1_1.txt  result_dmp_1D_test_1_1_1_6.0_1.0_10.0_4.0.txt  result_dmp_1D_test_1_2_0.txt  result_dmp_1D_test_1_2_1.txt  result_quat_dmp_multi_smoothed_traj_training_test_0_2.txt  result_quat_dmp_multi_smoothed_traj_training_test_0_2_learned_params.txt  result_quat_dmp_multi_traj_training_test_0_2.txt  result_quat_dmp_multi_traj_training_test_0_2_learned_params.txt  result_quat_dmp_single_traj_training_test_0_1.txt  result_quat_dmp_single_traj_training_test_0_2.txt
src/: paths.cpp
src/dmp_1D/: DMPDiscrete1D.cpp
src/dmp_base/: CanonicalSystem.cpp  DMP.cpp  DMPDataIO.cpp  FunctionApproximator.cpp  LearningSystem.cpp  LoggedDMPVariables.cpp  TransformationSystem.cpp
src/dmp_discrete/: CanonicalSystemDiscrete.cpp  DMPDataIODiscrete.cpp  DMPDiscrete.cpp  FuncApproximatorDiscrete.cpp  LearningSystemDiscrete.cpp  LoggedDMPDiscreteVariables.cpp  TransformSystemDiscrete.cpp
src/dmp_goal_system/: GoalSystem.cpp  QuaternionGoalSystem.cpp
src/dmp_multi_dim/: DMPDiscreteMultiDim.cpp
src/dmp_param/: DMPUnrollInitParams.cpp  TauSystem.cpp
src/dmp_state/: DMPState.cpp  QuaternionDMPState.cpp
src/neural_nets/: FFNNFinalPhaseLWRLayerPerDims.cpp  PMNN.cpp
src/utility/: DataIO.cpp  NormalDistributionRandomVectorGenerator.cpp  RealTimeAssertor.cpp  utility.cpp  utility_cartesian.cpp  utility_quaternion.cpp
(+1547 files in other folders)
